# solana-auditor

./: .gitignore  Anchor.toml  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: analyzer.rs  cli.rs  findings.rs  main.rs  report.rs  rpc.rs
cli/src/rules/: account_access.rs  compute.rs  mod.rs  rent.rs  signer.rs
programs/test-target/: Cargo.toml
programs/test-target/src/: lib.rs
