[workspace]

[package]
name = "solana-auditor"
version = "0.1.0"
description = "Automated Solana Program Health Scanner — Turbine3 Capstone"
edition = "2021"

[[bin]]
name = "solana-auditor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-rpc-client = "=2.3.13"
solana-rpc-client-api = "=2.3.13"
solana-sdk = "=2.3.1"
solana-transaction-status-client-types = "=2.3.13"
